--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   currency_text_input_formatter: ^2.1.13
   sqflite: ^2.3.2
   path: ^1.9.0
+  flutter_animate: ^4.5.0
 
 dev_dependencies:
   flutter_test:
