--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   sqflite: ^2.3.2
   path: ^1.9.0
   flutter_animate: ^4.5.0
+  flutter_svg: ^2.0.10+1
 
 dev_dependencies:
   flutter_test:
@@ -33,4 +34,5 @@ flutter:
           weight: 400
         - asset: assets/fonts/Montserrat-SemiBold.ttf
           weight: 600
-#  assets:
+  assets:
+    - assets/svg/
