--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   path: ^1.9.0
   flutter_animate: ^4.5.0
   flutter_svg: ^2.0.10+1
+  flex_color_picker: ^3.4.1
 
 dev_dependencies:
   flutter_test:
