--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_animate: ^4.5.0
   flutter_svg: ^2.0.10+1
   flex_color_picker: ^3.4.1
+  go_router: 15.1.2
 
 dev_dependencies:
   flutter_test:
