--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,8 +10,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   cupertino_icons: ^1.0.2
-  intl: ^0.19.0
+  intl: 0.19.0
   currency_text_input_formatter: ^2.1.13
   sqflite: ^2.3.2
   path: ^1.9.0
@@ -26,6 +28,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
 
 flutter:
+  generate: true
   uses-material-design: true
   fonts:
     - family: Montserrat
