--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   flutter_svg: ^2.0.10+1
   flex_color_picker: ^3.4.1
   go_router: 15.1.2
+  flutter_bloc: ^9.1.1
 
 dev_dependencies:
   flutter_test:
