--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,11 +22,15 @@ dependencies:
   flex_color_picker: ^3.4.1
   go_router: 15.1.2
   flutter_bloc: ^9.1.1
+  dev: ^1.0.0
+  equatable: ^2.0.7
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  mocktail: 1.0.4
+  bloc_test: 10.0.0
 
 flutter:
   generate: true
